v1.0.9 H2 migration and Schema modification.